# minishop

./: .dockerignore  .env.example  .gitignore  .npmrc  .spectra.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.app  Dockerfile.buyer-web  Dockerfile.go-backend  Dockerfile.go-backend-e2e  Dockerfile.go-seckill-ingress  Dockerfile.go-seckill-result-sink  Dockerfile.seckill-worker  Dockerfile.temporal-worker  Dockerfile.worker  Justfile  biome.json  bun.lockb  dependency-cruiser.config.cjs  docker-compose.benchmark.yml  docker-compose.frontend-go-backend-e2e.yml  docker-compose.go-backend-e2e.yml  docker-compose.remote-benchmark.yml  docker-compose.yml  drizzle.config.ts  instrumentation.node.cjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
app/: globals.css  layout.tsx  page.test.tsx  page.tsx
buyer-web/: index.html  tsconfig.json  vite.config.ts
contracts/: buy-intent-command.schema.json
db/: client.ts  schema.ts
e2e/: buyer-web-go-backend.spec.ts  frontend-go-backend.spec.ts
frontend/: checkout-preview.html  design-pattern.html
observability/: tempo.yaml
profiles/: CPU.20260419.062459.59977.0.001.cpuprofile  CPU.20260419.062500.60544.0.001.cpuprofile
scripts/: benchmark-buy-intent-temporal.ts  benchmark-buyer-web-seckill.ts  benchmark-checkout-postgres.ts  day1-benchmark.ts  ingest-buy-intent-command-bus.ts  k6-seckill-buy-intents.js  migrate-benchmark-artifacts.ts  process-buy-intent-command-batch.ts  (+24 more)
services/rust-kafka-client-bench/: Cargo.toml
services/rust-kafka-client-bench/src/: main.rs
(+281 files in other folders)
